test/files/pos/t8001/Test_2.scala
// scalac: -Werror
object Test extends App {
  Macros.foo
  (): Unit
}
