test/files/neg/macro-abort/Test_2.scala
object Test extends App {
  Macros.abort
}